# trinci-smartcontracts

./: .gitignore  .gitlab-ci.yml  README.md  build_wasm.sh  build_wasm_docker.sh
apps/: build_wasm.sh
apps-as/arya/: asconfig.json  msgpackable.ts  package.json  readme.md
apps-as/arya/assembly/: index.ts  msgpack.ts  retcodes.ts  types.ts  utils.ts
apps-as/arya/scutils/: exec.js  execArya.js  execCrypto.js  hashes.txt  publish.js
apps-as/scutils/: hashes.txt  package.json  publish.js
apps-as/scutils/include/: hashlist.js
apps-as/service/: asconfig.json  package.json
apps-as/service/assembly/: errors.ts  index.ts  msgpack.ts  types.ts
apps-as/utils/: .gitignore  aryaExec.js  kronoExec.js  package.json  publish.js  sampleExec.js  serviceExec.js
apps-rs/: build_wasm.sh  build_wasm_docker.sh  cargo_broadcast.sh  create_new_contract.sh  delete_target.sh  delete_targets.sh
apps-rs/asset/: CHANGELOG.md  Cargo.toml  README.md
apps-rs/asset-arya/: CHANGELOG.md  Cargo.toml  README.md
apps-rs/asset-arya/src/: lib.rs  types.rs
apps-rs/asset/src/: lib.rs  types.rs
apps-rs/asset_arya/: CHANGELOG.md  Cargo.toml  README.md
apps-rs/basic-vote/: CHANGELOG.md  Cargo.toml  README.md
apps-rs/basic-vote/src/: lib.rs  types.rs
apps-rs/bootstrap/: CHANGELOG.md  Cargo.toml  README.md
apps-rs/bootstrap/src/: lib.rs  types.rs
apps-rs/crypto/: CHANGELOG.md  Cargo.toml  README.md
apps-rs/crypto/src/: lib.rs  merkle_tree.rs  types.rs
apps-rs/dynamic-exchange/: CHANGELOG.md  Cargo.toml  README.md
apps-rs/dynamic-exchange/src/: lib.rs  types.rs
apps-rs/escrow/: CHANGELOG.md  Cargo.toml  README.md
apps-rs/escrow/src/: lib.rs  types.rs
apps-rs/nft/: CHANGELOG.md  Cargo.toml  README.md
apps-rs/nft/src/: lib.rs  types.rs
apps-rs/pay-meal/: CHANGELOG.md  Cargo.toml
apps-rs/pay-meal/src/: lib.rs  types.rs
apps-rs/service/: CHANGELOG.md  Cargo.toml  README.md
apps-rs/service/src/: lib.rs  types.rs
apps-rs/storage/: CHANGELOG.md  Cargo.toml
apps-rs/storage/src/: lib.rs  types.rs
apps-rs/test/: CHANGELOG.md  Cargo.toml
apps-rs/test/src/: lib.rs
apps-rs/time-oracle/: CHANGELOG.md  Cargo.toml  README.md
apps-rs/time-oracle/src/: lib.rs  types.rs
apps-rs/vote/: CHANGELOG.md  Cargo.toml  README.md
apps-rs/vote/src/: lib.rs  rsa.rs  types.rs
apps-rs/withdraw/: CHANGELOG.md  Cargo.toml  README.md
apps-rs/withdraw/src/: lib.rs  types.rs
apps/pay-meal/: CHANGELOG.md  Cargo.toml
apps/test/: Cargo.toml
asset/: Cargo.toml
asset/src/: lib.rs
integration/: Cargo.toml
integration/src/: app.rs  common.rs  lib.rs
integration/tests/: arya.rs  asset.rs  asset_arya.rs  basic_vote.rs  crypto.rs  dynamic_exchange.rs  escrow.rs  nft.rs  pay_meal.rs  production_vs_not.rs  service.rs  storage.rs  test.rs  time_oracle.rs  vote.rs  withdraw.rs
pay-meal/: Cargo.toml  README.md
pay-meal/src/: lib.rs
registry/: arya.wasm  asset.wasm  asset_arya.wasm  basic_vote.wasm  bootstrap.wasm  crypto.wasm  dynamic_exchange.wasm  escrow.wasm  nft.wasm  pay_meal.wasm  service.wasm  storage.wasm  test.wasm  time_oracle.wasm  vote.wasm  withdraw.wasm
