[package]
name = "integration"
authors = ["The Trinci Team <trinci@affidaty.io>"]
version = "0.1.0"
edition = "2018"

[dependencies]
trinci-core = { git = "https://github.com/affidaty-blockchain/trinci-core", default-features = false, features = [
    "with-rocksdb",
    "with-wasmtime",
] }
trinci-sdk = { git = "https://github.com/affidaty-blockchain/trinci-sdk-rust" }
env_logger = "0.9.0"
hex = "0.4.3"
lazy_static = "1.4.0"
serde = { version = "1.0.126", features = ["derive"] }
tempfile = "3.2.0"
serde-value = { git = "https://github.com/affidaty-blockchain/serde-value", branch = "helper_macro" }
log = "0.4.14"
serde_bytes = "0.11.5"
