[package]
name = "integration"
authors = ["The Trinci Team <trinci@affidaty.io>"]
version = "0.2.7-rc1"
edition = "2021"

[dependencies]
trinci-core = { git = "https://github.com/affidaty-blockchain/trinci-core", default-features = false, features = [
    "with-rocksdb",
    "with-wasmtime",
] }
trinci-sdk = { git = "https://github.com/affidaty-blockchain/trinci-sdk-rust" }
serde-value = { git = "https://github.com/affidaty-blockchain/serde-value", branch = "helper_macro" }
serde_bytes = "0.11.5"
env_logger = "0.9.0"
hex = "0.4.3"
lazy_static = "1.4.0"
serde = { version = "1.0.136", features = ["derive"] }
tempfile = "3.3.0"
log = "0.4.14"
glob = "0.3.0"
