[package]
name = "asset"
version = "0.1.3"
authors = ["The Trinci Team <trinci@affidaty.io>"]
edition = "2021"
description = "Basic TAI asset"

[lib]
crate-type = ["cdylib"]

[dependencies]
trinci-sdk = { git = "https://github.com/affidaty-blockchain/trinci-sdk-rust", rev="d0e134cd" }
serde = { version = "1.0.126", features = [ "derive" ] }

[dev-dependencies]
hex = "0.4.3"
