[package]
name = "asset_arya"
version = "0.1.0"
authors = ["The Affidaty Team <trinci@affidaty.io>"]
edition = "2018"
description = "Basic TAI asset with arya delegation"

[lib]
crate-type = ["cdylib"]

[dependencies]
trinci-sdk = { git = "https://github.com/affidaty-blockchain/trinci-sdk-rust" }
serde = { version = "1.0.126", features = ["derive"] }

[dev-dependencies]
hex = "0.4.3"
