[package]
name = "crypto"
version = "0.2.1"
authors = ["The Affidaty Team <trinci@affidaty.io>"]
edition = "2018"
description = "Cryptographic library"

[lib]
crate-type = ["cdylib"]

[dependencies]
trinci-sdk = { git = "https://github.com/affidaty-blockchain/trinci-sdk-rust" }
serde = "1.0.126"
serde_derive = "1.0.126"
serde_bytes = "0.11.5"
sha2 = "0.9.5"
hex = "0.4.3"

[dev-dependencies]
hex = "0.4.3"
