[package]
name = "escrow"
version = "0.2.3"
authors = ["The Affidaty Team <trinci@affidaty.io>"]

edition = "2018"
description = "Basic escrow"

[lib]
crate-type = ["cdylib"]

[dependencies]
trinci-sdk = { git = "https://github.com/affidaty-blockchain/trinci-sdk-rust" }
serde = "1.0.126"
serde_derive = "1.0.126"

[dev-dependencies]
hex = "0.4.3"
hashers = "1.0.1"
