[package]
name = "pay-meal"
version = "0.1.2"
authors = ["The Trinci Team <trinci@affidaty.io>"]
edition = "2018"
description = "Contract from the Trinci SDK Tutorial"

[lib]
crate-type = ["cdylib"]

[dependencies]
trinci-sdk = { git = "https://github.com/affidaty-blockchain/trinci-sdk-rust" }
serde = "1.0.126"
serde_derive = "1.0.126"

[dev-dependencies]
hex = "0.4.3"
