[package]
name = "pay-meal"
version = "0.1.3"
authors = ["The Trinci Team <trinci@affidaty.io>"]
edition = "2021"
description = "Contract from the Trinci SDK Tutorial"

[lib]
crate-type = ["cdylib"]

[dependencies]
trinci-sdk = { git = "https://github.com/affidaty-blockchain/trinci-sdk-rust" }
serde = { version = "1.0.137", features = ["derive"] }

[dev-dependencies]
hex = "0.4.3"
