[package]
name = "service"
version = "0.1.3"
authors = ["The Trinci Team <trinci@affidaty.io>"]
edition = "2018"
description = "Basic node service"

[lib]
crate-type = ["cdylib"]

[dependencies]
trinci-sdk = { git = "https://github.com/affidaty-blockchain/trinci-sdk-rust" }
serde = "1.0.126"
serde_derive = "1.0.126"
serde_bytes = "0.11.5"
hex = "0.4.3"
sha256 = "1.0.2"

[dev-dependencies]
hex = "0.4.3"
