[package]
name = "storage"
version = "0.1.2"
authors = ["The Affidaty Team <trinci@affidaty.io>"]
edition = "2021"
description = "Storage manager"

[lib]
crate-type = ["cdylib"]

[dependencies]
trinci-sdk = { git = "https://github.com/affidaty-blockchain/trinci-sdk-rust" }
serde = "1.0.126"
serde_derive = "1.0.126"
serde_bytes = "0.11.5"

[dev-dependencies]
hex = "0.4.3"

