[package]
name = "storage"
version = "0.1.2"
authors = ["The Affidaty Team <trinci@affidaty.io>"]
edition = "2021"
description = "Storage manager"

[lib]
crate-type = ["cdylib"]

[dependencies]
trinci-sdk = { git = "https://github.com/affidaty-blockchain/trinci-sdk-rust" }
serde = { version = "1.0.137", features = ["derive"] }
serde_bytes = "0.11.6"

[dev-dependencies]
hex = "0.4.3"
