[package]
name = "test"
version = "0.2.2"
authors = ["The Trinci Team <trinci@affidaty.io>"]
edition = "2021"
description = "Core wasm machine unit tests contract"

[lib]
crate-type = ["cdylib"]

[dependencies]
trinci-sdk = { git = "https://github.com/affidaty-blockchain/trinci-sdk-rust" }
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"
random = "0.12.2"
hashers = "1.0.1"

[dev-dependencies]
libc = "0.2.116"
hex = "0.4.3"
