[package]
name = "test"
version = "0.1.1"
authors = ["The Affidaty Team <trinci@affidaty.io>"]
edition = "2018"
description = "Core wasm machine unit tests contract"

[lib]
crate-type = ["cdylib"]

[dependencies]
trinci-sdk = { git = "https://github.com/affidaty-blockchain/trinci-sdk-rust" }
serde = "1.0.126"
serde_derive = "1.0.126"
serde_bytes = "0.11.5"

[dev-dependencies]
libc = "0.2.94"
hex = "0.4.3"
